--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,6 +8,9 @@ layout: default
   <div id="post" class="prose max-w-[75ch] prose-neutral mx-auto pb-10 pt-20 lg:pt-[90px] lg:pb-20">
     <h1 class="text-left text-2xl font-bold md:text-5xl text-black">{{page.title}}</h1>
 
+    <h1>{{ page.title }}</h1>
+    <p class="subtitle">{{ page.description }}</p>
+
     <img src="{{page.image}}" alt="{{page.title}}">
 
     <div class="my-6">
