--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,9 +25,9 @@
         <div class="dropdown-content absolute hidden mt-2 py-2 bg-white rounded shadow-lg z-20">
           {% for tongue in site.languages %}
           {% if tongue != site.active_lang %}
-          <a class="p-4 hover:text-sky-400" {% static_href
-            %}href="{% if tongue == site.default_lang %}{{site.baseurl}}{{page.url}}{% else %}{{site.baseurl}}/{{ tongue }}{{page.url}}{% endif %}"
-            {% endstatic_href %}>{{ tongue | upcase }}</a>{%- if forloop.last == false -%}{{" "}}{{ site.langsep }}{%-
+          <a class="p-4 hover:text-sky-400"
+  href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
+            {{ tongue | upcase }}</a>{%- if forloop.last == false -%}{{" "}}{{ site.langsep }}{%-
           endif -%}
           {% endif %}
           {% endfor %}
