--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -37,3 +37,9 @@ layout: default
   </div>
   {% endif%}
 </section>
+
+<ul>
+  {% for post in site.posts %}
+    <li>{{ post.title }} – {{ post.date }}</li>
+  {% endfor %}
+</ul>
