--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,3 +55,9 @@ layout: default
     {% include comment_system.html %}
   </div>
 </div>
+
+<ul>
+  {% for post in site.posts %}
+    <li>{{ post.title }} - {{ post.image }}</li>
+  {% endfor %}
+</ul>
