--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,7 @@
 a.gentle-clicked {
   animation: gentle-bounce 0.3s ease-out; /* Shorter, smoother animation */
 }
+
+p {
+  text-align: justify;
+}
