--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,18 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  border-left: 4px solid #00569d;
+  padding-left: 1rem;
+  margin-top: 2rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+  font-style: italic;
+  color: #90b1db;
+  margin-top: 1.5rem;
+}
