--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="{{ '/assets/css/dist-style.css' | relative_url }}" rel="stylesheet" />
   <link href="{{ '/assets/css/fonts.css' | relative_url }}" rel="stylesheet" />
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link href="assets/css/style.css" rel="stylesheet" />
   {% if site.typewriter_effect %}
   <script src="https://unpkg.com/typeit@8.8.4/dist/index.umd.js"></script>
   {% endif %} {% seo %} {% include custom_head.html %}
