--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ img {
   font-size: 1.875rem !important; /* text-3xl */
   font-weight: 700;
   margin-top: 2rem;
-  color: #031a2f !important;
+  color: #0b2946 !important;
 }
 
 .prose h3 {
