--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,10 @@ p {
   text-align: justify;
 }
 
-img {
+.prose img {
   display: block;
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
   margin-left: auto;
   margin-right: auto;
 }
