--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,3 +22,18 @@ layout: default
 
   </div>
 </div>
+
+<script src="https://giscus.app/client.js"
+        data-repo="shabdesign/shabdesign.github.io"
+        data-repo-id="R_kgDOO3E0Qg"
+        data-category-id="DIC_kwDOO3E0Qs4CsSc3"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light_tritanopia"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
