--- a/_includes/post_main.html
+++ b/_includes/post_main.html
@@ -10,7 +10,7 @@
       <h2 class="hover:underline decoration-2 text-2xl md:text-4xl font-bold text-gray-800 pb-4 ">{{ include.post.title
         }}</h2>
     </a>
-    <div class="md:text-lg pb-6 font-semibold">
+    <div class="md:text-lg pb-6 font-normal">
       <a href="{{include.post.url | relative_url}}" aria-label="Post Url">
         {{include.post.excerpt}}
       </a>
