--- a/_includes/post_main.html
+++ b/_includes/post_main.html
@@ -23,7 +23,7 @@
   </div>
 
   <a href="{{ include.post.url | relative_url }}"
-    class="hover:opacity-90 transition duration-300 w-full md:w-1/2 md=pr-6 h-80 md:h-96 bg-cover bg-center"
+    class="hover:opacity-90 transition duration-300 w-full md:w-1/2 md=mr-6 h-80 md:h-96 bg-cover bg-center"
     style="background-image: url('{{ include.post.image }}')">
   </a>
 </div>
