--- a/_includes/post_main.html
+++ b/_includes/post_main.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col-reverse justify-between md:flex-row mx-auto">
+<div class="flex flex-col-reverse justify-between md:flex-row md=gap-6 mx-auto">
   <div class="max-w-xl">
     <div class="mb-4 mt-4 md:mt-0 md:mb-6">
       <a href="{{site.url}}{{site.baseurl}}/category/{{include.post.categories[0] | replace: ' ', '-' | downcase}}"
