--- a/_includes/post_main.html
+++ b/_includes/post_main.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col-reverse justify-between md:flex-row md=gap-6 mx-auto">
+<div class="flex flex-col-reverse justify-between md:flex-row md:gap-6 mx-auto">
   <div class="max-w-xl">
     <div class="mb-4 mt-4 md:mt-0 md:mb-6">
       <a href="{{site.url}}{{site.baseurl}}/category/{{include.post.categories[0] | replace: ' ', '-' | downcase}}"
@@ -23,7 +23,7 @@
   </div>
 
   <a href="{{ include.post.url | relative_url }}"
-    class="hover:opacity-90 transition duration-300 w-full md:w-1/2 md=mr-6 h-80 md:h-96 bg-cover bg-center"
+    class="hover:opacity-90 transition duration-300 w-full md:w-1/2 md:pr-6 h-80 md:h-96 bg-cover bg-center"
     style="background-image: url('{{ include.post.image }}')">
   </a>
 </div>
