--- a/_includes/project_card.html
+++ b/_includes/project_card.html
@@ -4,7 +4,7 @@
     <p class="font-mulish text-gray-500 mt-6 mb-2 ">{{include.project.category | upcase}}</p>
     <h2 class="text-2xl hover:underline font-bold my-2 text-gray-800">{{include.project.title}}</h2>
     <div class="font-mulish">
-      {{include.project.excerpt}}
+      {{include.project.excerpt | strip_html | truncatewords: 50, "..." }}
     </div>
     <div class="my-4">
       {% for tag in include.project.tags %}
