--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,15 @@
   {% if site.typewriter_effect %}
   <script src="https://unpkg.com/typeit@8.8.4/dist/index.umd.js"></script>
   {% endif %} {% seo %} {% include custom_head.html %}
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NYXT8119B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4NYXT8119B');
+  </script>
 </head>
 
 <body class="bg-white text-gray-900 dark:bg-gray-700 dark:text-slate-100">
